<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorButtonNormal"
    android:orientation="vertical"
    tools:context="edu.uncc.weatherapp.CityWeatherActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_dark">

    </View>

    <TextView
        android:id="@+id/textViewHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/headlinelabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewHeadtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/textViewForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewForcastText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/textViewCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="150dp"
        android:text="@string/condition_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <RelativeLayout
        android:id="@+id/relativeLayoutForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/day_label"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textViewNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/night_label"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

        <ImageView
            android:id="@+id/imageViewDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewDay"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <ImageView
            android:id="@+id/imageViewNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewNight"
            android:layout_marginRight="45dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <TextView
            android:id="@+id/textViewForecastDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageViewDay"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textViewForecastNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageViewNight"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewMoreDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:paddingLeft="100dp"
        android:text="@string/moredetails_label"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewForecasts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        />

    <TextView
        android:id="@+id/textViewExtendedForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:clickable="true"
        android:paddingLeft="80dp"
        android:text="@string/extended_forecast_label"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
